Align source compilation resolution with JPMS